--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ authors = ["TT <tobias.thummerer@informatik.uni-augsburg.de>", "LM <lars.mikelso
 version = "0.10.0"
 
 [deps]
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 
 [compat]
 julia = "^1.5"
