--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.11.0"
 
 [deps]
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 julia = "^1.5"
