--- a/.github/workflows/Eval.yml
+++ b/.github/workflows/Eval.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           version: ${{ matrix.julia-version }}
           arch: ${{ matrix.julia-arch }}
+        id: version
 
      # Set up cache
       - name: "Set up cache"
@@ -51,5 +52,6 @@ jobs:
         run: |
           git clone https://github.com/JuliaCI/PkgEval.jl.git
           cd PkgEval.jl
+          echo ${{ steps.version.outputs }}
           julia --project -e 'import Pkg; Pkg.instantiate()'
-          julia --project bin/test_package.jl --name=FMICore --julia=${{ matrix.julia-version }}
+          julia --project bin/test_package.jl --name=FMICore --julia=${{ steps.version.outputs }}
